# terra

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: emergence-rules.md
prototype/: index.html
scripts/: gen-icon.mjs
src/: App.css  App.tsx  mock-invoke.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: icon_color.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ambient.rs  category.rs  commands.rs  db.rs  lib.rs  main.rs  process_monitor.rs
src/components/: EmergencePreview.css  EmergencePreview.tsx  Gallery.css  Gallery.tsx  Garden.css  Garden.tsx  GardenEmergence.ts  GardenGrowth.ts  GardenObjects.ts  Settings.css  Settings.tsx  TaskCreateDialog.css  TaskCreateDialog.tsx  TaskEditDialog.tsx  TaskList.css  TaskList.tsx
src/components/garden/: grid.ts  scene.ts
src/components/garden/effects/: fire.ts  manager.ts  mapping.ts  nature.ts  types.ts  water.ts
src/components/garden/emergence/: anim.ts  detect.ts  helpers.ts  index.ts
src/components/garden/emergence/rules/: cluster.ts  effect.ts  structure.ts
