[package]
name = "hakoniwa-todo"
version = "0.1.0"
description = "箱庭TODO - タスク管理 × プロセス監視 × HD-2Dボクセル箱庭"
authors = ["ryuichi iha"]
edition = "2021"

[lib]
name = "hakoniwa_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.36", features = ["bundled"] }
sysinfo = "0.35"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }

