[package]
name = "terra"
version = "0.0.0-dev"
description = "terra - process-driven task rewards with an HD-2D voxel garden"
authors = []
edition = "2021"

[lib]
name = "terra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.36", features = ["bundled"] }
sysinfo = "0.35"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

